# Metronerm

./: CMakeCache.txt  CMakeLists.txt  Makefile  Metronome  README.md  cmake_install.cmake  compile_commands.json  metronal
.cache/clangd/index/: main.cpp.A6D98342465AFE67.idx  printargs.cpp.7DE306C7348F5504.idx  printargs.h.E9FEF0DEC41F454F.idx  test.cpp.272B342C908C005A.idx
src/: main.cpp  printargs.cpp  printargs.h  signal_int.h
